[gd_scene load_steps=2 format=3 uid="uid://b612hrr7ajpb4"]

[ext_resource type="Script" uid="uid://bl7qvqum5nix7" path="res://selector.gd" id="1_2m6kw"]

[node name="Selector" type="CanvasLayer"]
script = ExtResource("1_2m6kw")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SimulationSpeed" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SimulationSpeed"]
layout_mode = 2
text = "Simulation Speed"

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/SimulationSpeed"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/SimulationSpeed"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -3.0
max_value = 3.0

[node name="File" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/File"]
layout_mode = 2
text = "Save"

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/File"]
layout_mode = 2
text = "Open"

[node name="New" type="Button" parent="MarginContainer/VBoxContainer/File"]
layout_mode = 2
text = "New"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Misc" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Interact" type="Button" parent="MarginContainer/VBoxContainer/Misc"]
layout_mode = 2
text = "Interact"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Basic" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Conduit" type="Button" parent="MarginContainer/VBoxContainer/Basic"]
layout_mode = 2
text = "Conduit"

[node name="Source" type="Button" parent="MarginContainer/VBoxContainer/Basic"]
layout_mode = 2
text = "Source"

[node name="Sink" type="Button" parent="MarginContainer/VBoxContainer/Basic"]
layout_mode = 2
text = "Sink"

[node name="Splitter" type="Button" parent="MarginContainer/VBoxContainer/Basic"]
layout_mode = 2
text = "Splitter"

[node name="Sequencer" type="Button" parent="MarginContainer/VBoxContainer/Basic"]
layout_mode = 2
text = "Sequencer"

[node name="Cross" type="Button" parent="MarginContainer/VBoxContainer/Basic"]
layout_mode = 2
text = "Cross"

[node name="LogicGates" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="And" type="Button" parent="MarginContainer/VBoxContainer/LogicGates"]
layout_mode = 2
text = "And"

[node name="Or" type="Button" parent="MarginContainer/VBoxContainer/LogicGates"]
layout_mode = 2
text = "Or"

[node name="Xor" type="Button" parent="MarginContainer/VBoxContainer/LogicGates"]
layout_mode = 2
text = "Xor"

[node name="Not" type="Button" parent="MarginContainer/VBoxContainer/LogicGates"]
layout_mode = 2
text = "Not"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/SimulationSpeed/Slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/File/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/File/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/File/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Misc/Interact" to="." method="_on_interact_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Basic/Conduit" to="." method="_on_conduit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Basic/Source" to="." method="_on_source_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Basic/Sink" to="." method="_on_sink_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Basic/Splitter" to="." method="_on_splitter_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Basic/Sequencer" to="." method="_on_sequencer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Basic/Cross" to="." method="_on_cross_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LogicGates/And" to="." method="_on_and_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LogicGates/Or" to="." method="_on_or_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LogicGates/Xor" to="." method="_on_xor_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LogicGates/Not" to="." method="_on_not_pressed"]
